src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    @apply text-text font-light overflow-x-hidden w-full text-xs;
  }
  h1 {
    @apply text-6xl;
  }
  h2 {
    @apply text-5xl;
  }
  h3 {
    @apply text-4xl;
  }
  h4 {
    @apply text-3xl;
  }
  h5 {
    @apply text-2xl;
  }
  h6 {
    @apply text-xl;
  }
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply font-bold;
    @apply leading-normal;
  }
  a {
    @apply underline inline-block;
  }
  p {
    @apply leading-loose;
  }

  @media screen(lg) {
    html {
      @apply text-text font-light overflow-x-hidden text-base;
    }
  }
}

@layer components {
  .post-section {
    @apply max-w-5xl flex flex-col gap-y-8 mx-auto text-xl;
  }

  .post-section img {
    @apply my-24 rounded-xl;
  }

  @media screen(md) {
    .post-section > *:not(:has(img)) {
      @apply px-12;
    }
  }

  @media screen and (max-width: 768px) {
    #nav-list.expanded {
      @apply absolute top-28 right-0 flex flex-col gap-y-4 items-end text-bg z-20;
    }

    nav:has(#nav-list.expanded) {
      @apply text-bg;
    }

    #nav-list > * {
      @apply z-20;
    }

    #nav-list.expanded:before {
      content: "";
      @apply absolute w-96 h-96 rounded-full bg-text top-0 right-0 translate-x-32 -translate-y-48 z-10;
    }

    #nav-list:not(.expanded) {
      @apply hidden;
    }
  }
}

